@@ -5,7 +5,7 @@ use Config;
 &check_kit;
 
 my $libdir; my $man1dir; my $man3dir; my $comment; my $perlbin;
-my $version = '1.20';
+my $version = '1.21';
 ($libdir, $man1dir, $man3dir) = &defaults();
 
 if (! -t STDIN) {  # not interactive, use defaults ...
@@ -218,10 +218,10 @@ sub check_kit {
 
 	my %file_sizes = (
 		'README', 2836,
-		'Changes', 948,
+		'Changes', 1076,
 		'MANIFEST', 121,
 		'Clui.pm', 32403,
-		'Clui/FileSelect.pm', 8846,
+		'Clui/FileSelect.pm', 8844,
 		'examples/test_script', 6609,
 		'examples/login_shell', 4703,
 	);
