@@ -13,3 +13,5 @@
 20031103 1.19 bug fixed handling DOWN in &choose
 20031214 select used in &getch to return ESC promptly
 20040520 1.20 minor doc fix for FileSelect, contact.html not email address
+20040708 FileSelect -FPat bug fixed, and another minor doc fix
+20040708 1.21 examples/test_script defaults to installed Clui.pm
